<resources>
    <string name="app_name_release" translatable="false">Passman</string>
    <string name="app_name_alpha" translatable="false">Passman - Alpha</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_login" translatable="false">Passman - Login</string>
    <string name="nchost">Server address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="wrongNCUrl">Incorrect Nextcloud backend URL or unable to connect</string>
    <string name="wrongNCSettings">Settings incorrect</string>
    <string name="net_error">Network error</string>
    <string name="net_error_dialog_description">Could not connect to the server!\nChanges cannot be saved without a working server connection.</string>
    <string name="unlock">Unlock</string>
    <string name="wrong_vault_pw">Wrong vault password</string>
    <string name="label">Label</string>
    <string name="email">Email</string>
    <string name="URL">URL</string>
    <string name="description">Description</string>
    <string name="copied_to_clipboard">Text copied to clipboard</string>
    <string name="vault_password">Vault password</string>
    <string name="vault_password_save">Save the vault password</string>
    <string name="otp" translatable="false">OTP</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="created">Created:</string>
    <string name="last_accessed">Last accessed:</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="successfully_saved">Successfully saved</string>
    <string name="error_occurred">An error occurred</string>
    <string name="update">Update</string>
    <string name="successfully_updated">Successfully updated</string>
    <string name="delete">Delete</string>
    <string name="successfully_deleted">Successfully deleted</string>
    <string name="nextcloud_connection_settings">Nextcloud connection settings</string>
    <string name="app_settings">App settings</string>
    <string name="wait_while_loading">Wait while loading …</string>
    <string name="loading">Loading</string>
    <string name="error_downloading_file">Error downloading the file</string>
    <string name="error_writing_file">Error writing the file</string>
    <string name="files">Files</string>
    <string name="custom_fields">Custom fields</string>
    <string name="add_file">Add file</string>
    <string name="add_custom_field">Add custom field</string>
    <string name="unlock_passman">Unlock Passman</string>
    <string name="unlock_passman_message_device_auth">Please authenticate to access Passman</string>
    <string name="app_security">App security</string>
    <string name="app_start_password">App start password</string>
    <string name="app_start_password_android_auth_description">Enable Android user authentication on app start</string>
    <string name="wait_while_encrypting">Wait while encrypting …</string>
    <string name="wait_while_decrypting">Wait while decrypting …</string>
    <string name="wait_while_uploading">Wait while uploading …</string>
    <string name="wait_while_downloading">Wait while downloading …</string>
    <string name="autofill_noactivevault">No active vault</string>
    <string name="autofill_vaultlocked">Vault needs to be unlocked</string>
    <string name="autofill_vaultempty">No credentials in vault</string>
    <string name="autofill_createdbyautofillservice">Created by autofill service</string>
    <string name="default_autofill_vault">Default autofill vault</string>
    <string name="automatically">automatically</string>
    <string name="request_connect_timeout">Request connect timeout (in seconds)</string>
    <string name="request_response_timeout">Request response timeout (in seconds)</string>
    <string name="expert_settings">Expert settings</string>
    <string name="confirm_credential_deletion">Are you sure you want to delete this credential?</string>
    <string name="confirm_vault_deletion">Are you sure you want to delete this vault?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="enable_credential_list_icons">Enable credential list icons</string>
    <string name="credential_icon">Credential icon</string>
    <string name="color_password_digits">Highlight password characters</string>
    <string name="color_password_digits_description">Color characters in revealed passwords</string>
    <string name="choose_password_digit_color">Choose highlight color</string>
    <string name="highlight_color_digits">Digits</string>
    <string name="highlight_color_symbols">Symbols</string>
    <string name="highlight_color_uppercase">Uppercase letters</string>
    <string name="highlight_color_lowercase">Lowercase letters</string>
    <string name="clear_clipboard_delay">Clear clipboard (after seconds)</string>
    <string name="vault_auto_lock_delay">Vault auto-lock (after minutes)</string>
    <string name="enable_screenshot_protection">Hide app content in recents, screenshots and on non-secure displays</string>
    <plurals name="vault_locking_in">
        <item quantity="one">Vault will be locked in %1$d second</item>
        <item quantity="other">Vault will be locked in %1$d seconds</item>
    </plurals>
    <string name="vault_locked_notification_title">Vault Locked</string>
    <string name="vault_locked_notification_text">The active vault has been automatically locked due to inactivity.</string>
    <string name="security_channel_name">Vault Security</string>
    <string name="generate_password">Generate password</string>
    <string name="generate_password_to_clipboard">Generate a random password and copy to clipboard</string>
    <string name="enable_password_generator_shortcut_description">Enable password generator app shortcut</string>
    <string name="password_generator_require_every_char_type">Require every character type</string>
    <string name="password_generator_avoid_ambiguous_chars">Avoid ambiguous characters</string>
    <string name="password_generator_use_special_chars">Use special characters</string>
    <string name="password_generator_use_digits">Use digits</string>
    <string name="password_generator_use_lowercase">Use lowercase characters</string>
    <string name="password_generator_use_uppercase">Use uppercase characters</string>
    <string name="password_length">Password length</string>
    <string name="vault_name">Vault name</string>
    <string name="sharing_key_strength">Sharing key strength</string>
    <string name="new_vault_name">New vault name</string>
    <string name="offline_cache">Offline cache</string>
    <string name="offline_cache_description">Caches the encrypted vaults if they were loaded manually</string>
    <string name="enable_offline_cache">Enable offline cache</string>
    <string name="clear_offline_cache">Clear offline cache</string>
    <string name="nextcloud_single_sign_on">Nextcloud Single Sign On</string>
    <string name="manual_login">Manual Login</string>
    <string name="confirm_account_logout">Are you sure you want to log out?</string>
    <string name="digits">Digits</string>
    <string name="period">Period</string>
    <string name="value">Value</string>
    <string name="faq">FAQ</string>
    <string name="secret">Secret</string>
    <string name="issuer">Issuer</string>
    <string name="error_parsing_qr_code">Error parsing QR code</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="no_matching_credentials_or_fields_found">No matching credentials or auto-fillable fields were found</string>
    <string name="no_active_vault_add_credential_error">No active vault. Cannot add credential!</string>
    <string name="automatic_autofill_vault_description">Select Automatic if you want autofill to only be provided when a Vault is actively open and unlocked in the app</string>
    <string name="autofill_manual_search_fallback">Manual credential search as autofill fallback option</string>
    <string name="set_as_autofill_service">Set as autofill service</string>
    <string name="algorithm">Algorithm</string>
    <string name="enable_case_insensitive_credential_label_sort">Enable case-insensitive credential sort</string>
    <string name="credential_list_sort_settings">Credential list sort settings</string>
    <string name="restore_custom_credential_sort_order">Restore custom credential sort order</string>
</resources>
