<!--
    *  Passman Android App
    *
    * @copyright Copyright (c) 2016, Sander Brand (brantje@gmail.com)
    * @copyright Copyright (c) 2016, Marcos Zuriaga Miguel (wolfi@wolfi.es)
    * @license GNU AGPL version 3 or any later version
    *
    * This program is free software: you can redistribute it and/or modify
    * it under the terms of the GNU Affero General Public License as
    * published by the Free Software Foundation, either version 3 of the
    * License, or (at your option) any later version.
    *
    * This program is distributed in the hope that it will be useful,
    * but WITHOUT ANY WARRANTY; without even the implied warranty of
    * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    * GNU Affero General Public License for more details.
    *
    * You should have received a copy of the GNU Affero General Public License
    * along with this program.  If not, see <http://www.gnu.org/licenses/>.
    *
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="es.wolfi.app.passman.CredentialDisplay">

        <TextView
            android:id="@+id/edit_credential_label_header"
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/label" />

        <EditText
            android:id="@+id/edit_credential_label"
            style="@style/FormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/label" />

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/edit_credential_user"
            style="@style/FormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/username" />

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edit_credential_password"
            style="@style/FormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/password" />

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edit_credential_email"
            style="@style/FormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/email" />

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/URL" />

        <EditText
            android:id="@+id/edit_credential_url"
            style="@style/FormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            tools:text="@string/URL" />

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/edit_credential_description"
            style="@style/FormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/DeleteCredentialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/delete"
                android:theme="@style/Button.Danger" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

            <Button
                android:id="@+id/UpdateCredentialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/update"
                android:theme="@style/Button.Primary" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>