<!--
    *  Passman Android App
    *
    * @copyright Copyright (c) 2016, Sander Brand (brantje@gmail.com)
    * @copyright Copyright (c) 2016, Marcos Zuriaga Miguel (wolfi@wolfi.es)
    * @license GNU AGPL version 3 or any later version
    *
    * This program is free software: you can redistribute it and/or modify
    * it under the terms of the GNU Affero General Public License as
    * published by the Free Software Foundation, either version 3 of the
    * License, or (at your option) any later version.
    *
    * This program is distributed in the hope that it will be useful,
    * but WITHOUT ANY WARRANTY; without even the implied warranty of
    * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    * GNU Affero General Public License for more details.
    *
    * You should have received a copy of the GNU Affero General Public License
    * along with this program.  If not, see <http://www.gnu.org/licenses/>.
    *
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="es.wolfi.app.passman.CredentialDisplay">

        <TextView
            style="@style/Label"
            android:id="@+id/add_credential_label_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/label"/>

        <EditText
            android:id="@+id/add_credential_label"
            style="@style/FormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/label"/>

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/add_credential_user"
            style="@style/FormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/username"/>

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/add_credential_password"
            style="@style/FormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/password"/>

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/add_credential_email"
            style="@style/FormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/email"/>

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/URL"/>

        <EditText
            android:id="@+id/add_credential_url"
            style="@style/FormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            tools:text="@string/URL"/>

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"/>

        <EditText
            android:id="@+id/add_credential_description"
            style="@style/FormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/description"/>

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/files" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:nestedScrollingEnabled="false"
            app:layoutManager="LinearLayoutManager"
            tools:itemCount="2"
            tools:context="es.wolfi.app.passman.CredentialAdd"
            tools:listitem="@layout/fragment_credential_file_item">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/AddFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/add_file"
            android:drawableStart="@drawable/ic_plus_white"
            android:theme="@style/Button.Primary" />

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_fields"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/customFieldsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:nestedScrollingEnabled="false"
            app:layoutManager="LinearLayoutManager"
            tools:itemCount="2"
            tools:context="es.wolfi.app.passman.CredentialEdit"
            tools:listitem="@layout/fragment_credential_custom_field_item">
        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start">

                <Spinner
                    android:id="@+id/customFieldType"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:entries="@array/customFieldTypes"
                    android:minWidth="@dimen/protocol_spinner"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <Button
                android:id="@+id/AddCustomFieldButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/add_custom_field"
                android:drawableStart="@drawable/ic_plus_white"
                android:theme="@style/Button.Primary" />

        </LinearLayout>

        <Button
            android:id="@+id/SaveCredentialButton"
            style="@style/Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            android:theme="@style/Button.Primary"/>

    </LinearLayout>
</ScrollView>