<!--
    *  Passman Android App
    *
    * @copyright Copyright (c) 2016, Sander Brand (brantje@gmail.com)
    * @copyright Copyright (c) 2016, Marcos Zuriaga Miguel (wolfi@wolfi.es)
    * @license GNU AGPL version 3 or any later version
    *
    * This program is free software: you can redistribute it and/or modify
    * it under the terms of the GNU Affero General Public License as
    * published by the Free Software Foundation, either version 3 of the
    * License, or (at your option) any later version.
    *
    * This program is distributed in the hope that it will be useful,
    * but WITHOUT ANY WARRANTY; without even the implied warranty of
    * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    * GNU Affero General Public License for more details.
    *
    * You should have received a copy of the GNU Affero General Public License
    * along with this program.  If not, see <http://www.gnu.org/licenses/>.
    *
-->
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:rowCount="7"
    android:columnCount="2"
    tools:context="es.wolfi.app.passman.CredentialDisplay">

    <TextView
        android:text="@string/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        tools:text="Label"
        android:id="@+id/credential_label"
    />

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
    />

    <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="textPersonName"-->
        <!--android:text=""-->
        <!--android:ems="10"-->
        <!--android:id="@+id/credential_user"-->
        <!--tools:text="User"-->
    <!--/>-->
    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="es.wolfi.app.passman.CopyTextItem"
        android:id="@+id/credential_user" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />

    <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="textPassword"-->
        <!--tools:text="Password"-->
        <!--android:ems="10"-->
        <!--android:id="@+id/credential_password" />-->

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="es.wolfi.app.passman.CopyTextItem"
        android:id="@+id/credential_password" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />

    <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="textEmailAddress"-->
        <!--tools:text="example@example.com"-->
        <!--android:ems="10"-->
        <!--android:id="@+id/credential_email" />-->
    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="es.wolfi.app.passman.CopyTextItem"
        android:id="@+id/credential_email" />

    <TextView
        android:text="@string/URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        tools:text="www.example.com"
        android:ems="10"
        android:id="@+id/credential_url"
    />

    <TextView
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="0dp"
     />

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="es.wolfi.app.passman.CopyTextItem"
        android:id="@+id/credential_description" />

    <TextView
        android:text="@string/otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="0dp"
    />

    <RelativeLayout android:layout_width="wrap_content">
        <view
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            class="es.wolfi.app.passman.CopyTextItem"
            android:id="@+id/credential_otp"
        />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_below="@id/credential_otp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="-20dp"
            android:id="@+id/credential_otp_progress"
            android:max="3000"
            android:progress="1500"
            android:layout_alignEnd="@+id/credential_otp" />
    </RelativeLayout>
</GridLayout>
